fix:change colour of submit button for better contrast as per lighthouse test

--- a/assets/style.css
+++ b/assets/style.css
@@ -348,11 +348,11 @@ textarea {
 
 button {
     width: 100%;
-    background-color: #837980;
+    background-color: #59013e;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    padding: 12px 15px;
+    padding: 1px 6px;
     margin-top: 15px;
     color: white;
     margin-bottom: 8px;
